--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <header id="top">
       <h1>Prework Study Guide</h1>
       <img
-        src="./assets/yeah-excellent.gif"
-        alt="Profile image shocked Michael Scott"        
-      />
+        src="./assets/yeah-excellent.gif" alt="Profile image shocked Michael Scott"/>
+      <h2>✨ Open the Console to See What's Happening ✨</h2>
+
     </header>
     <main>
       <section class="card" id="html-section">
@@ -39,9 +39,8 @@
           <li>git checkout -b branch-name: creates a new branch and switches to it</li>
           <li>git pull origin main: copies the main branch to local device</li>
           <li>git add -A: Stages files to be committed</li>
-
-          <li>git commit -m "message": commit files to the repository</li>
-          <li>git push origin :</li>
+          <li>git commit -m "message": save changes in the local repository</li>
+          <li>git push origin : To upload local repository to the remote repository</li>
           <li><a href="./assets/github-git-cheat-sheet.pdf">Git Cheat Sheet</a></li>
         </ul>
       </section>
@@ -57,5 +56,6 @@
     <footer>
       <p>I can code!</p>
     </footer>
+    <script src="./assets/script.js"></script>
   </body>
 </html>
